- Now the hosting can be stopped directly - Code cleanup